--- a/DataStoring.Contract/DataStoring.Contract.csproj
+++ b/DataStoring.Contract/DataStoring.Contract.csproj
@@ -10,4 +10,8 @@
     <Folder Include="DataClasses\" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\DataClasses\DataClasses.csproj" />
+  </ItemGroup>
+
 </Project>
