DI Framework hinzugefügt

--- a/ConsoleClient/ConsoleClient.csproj
+++ b/ConsoleClient/ConsoleClient.csproj
@@ -12,4 +12,8 @@
     <ProjectReference Include="..\PersonManagement\PersonManagement.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Ninject" Version="3.3.4" />
+  </ItemGroup>
+
 </Project>
